Finish recipe website with addition of final recipes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/olive-oil-pasta.html">olive oil pasta</a>
+    
+    <img src="./images/easy-vegan-meals.jpeg" alt="easy vegan meals" width="700">
+    <h2>Quick vegan meals your family will love!</h2>
+    <ul>
+        <li><a href="./recipes/olive-oil-pasta.html">Olive Oil Pasta</a></li>
+        <li><a href="./recipes/potato-with-soyrizo-tacos.html">Potato Tacos with Soyrizo</a></li>
+        <li><a href="./recipes/sticky-shitake-mushrooms.html">Sticky Shitake Mushrooms</a></li>
+    </ul>
     
 </body>
 </html>
